apps/homelab/external/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-external
  namespace: external
spec:
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8200
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pihole-external
  namespace: external
  labels:
    kubernetes.io/service-name: pihole-external
subsets:
  - addresses:
      - ip: 192.168.0.112
    ports:
      - name: http
        port: 8200
        protocol: TCP
