apps/homelab/external/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  tls:
    - hosts:
        - pihole.homelab.rookian.dev
      secretName: tls-pihole-homelab
  rules:
    - host: pihole.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-external
                port:
                  name: http
---
